--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ fonttools==4.56.0
 fsspec==2025.2.0
 geopandas==1.0.1
 idna==3.10
+imageio==2.37.0
 ipykernel==6.29.5
 ipython==9.0.1
 ipython_pygments_lexers==1.1.1
@@ -28,6 +29,7 @@ jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.8
+lazy_loader==0.4
 MarkupSafe==3.0.2
 matplotlib==3.10.1
 matplotlib-inline==0.1.7
@@ -75,14 +77,18 @@ rasterio==1.4.3
 referencing==0.36.2
 requests==2.32.3
 rpds-py==0.23.1
+scikit-image==0.25.2
+scipy==1.15.2
 setuptools==75.8.2
 shapely==2.0.7
 six==1.17.0
 stack-data==0.6.3
 sympy==1.13.1
+tifffile==2025.2.18
 torch==2.6.0
 torchvision==0.21.0
 tornado==6.4.2
+tqdm==4.67.1
 traitlets==5.14.3
 triton==3.2.0
 typing_extensions==4.12.2
